@@ -108,6 +108,7 @@ Collate:
     'interactive_roundrect_grob.R'
     'interactive_segments_grob.R'
     'interactive_text_grob.R'
+    'labeller_interactive.R'
     'layer_interactive.R'
     'scale_alpha_interactive.R'
     'scale_brewer_interactive.R'
