@@ -116,6 +116,7 @@ export(guide_colorsteps_interactive)
 export(guide_colourbar_interactive)
 export(guide_coloursteps_interactive)
 export(guide_legend_interactive)
+export(id_label)
 export(interactive_circle_grob)
 export(interactive_lines_grob)
 export(interactive_path_grob)
@@ -128,6 +129,7 @@ export(interactive_roundrect_grob)
 export(interactive_segments_grob)
 export(interactive_text_grob)
 export(label_interactive)
+export(labeller_interactive)
 export(match_family)
 export(opts_hover)
 export(opts_hover_inv)
